# Unnaming_Game

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: compiler.cmake  libraries.cmake
docs/: main_source
docs/Interface_folder/: Random_header  Random_source
docs/Map_folder/: Map_source
docs/UML/: Basic.puml  Block.puml  Building.puml
docs/en_us/: main_source.md
docs/en_us/Interface/: Input_header.md  Random_header.md
docs/en_us/Interface_folder/: Input_header  Input_header.md  Random_header  Random_header.md
docs/en_us/Map/: Map_source.md  World_source
docs/en_us/Map_folder/: Map_folder  Map_folder.md  Map_source  World_source
docs/en_us/src/: main_source.md
docs/en_us/src/Map/: Map_source.md  World_source.md
docs/zh_cn/: main_source  main_source.md
docs/zh_cn/FrontEnd/: KeyBoardInput_header.md
docs/zh_cn/Interface/: Input_header.md  Random_header.md
docs/zh_cn/Map/: Map_source.md
docs/zh_cn/src/: main_source.md
docs/zh_cn/src/FrontEnd/: CinInput_source.md
docs/zh_cn/src/Map/: Map_folder.md  Map_source.md
src/: Base.h  CPP.h  CPPLINT.cfg  ConstValue.h  main.cc  main.h
src/Common/: Fraction.h  Point.h
src/Fov/: CMakeLists.txt  fov_cmake.h  fraction.h  fraction.hpp  shadowcasting.cc  shadowcasting.h
src/FrontEnd/: CMakeLists.txt  CinInput.cc  CinInput.h  KeyBoardInput.h  cininput_cmake.h
src/Graphic/: CMakeLists.txt  Renderer.cc  Renderer.h  renderer_cmake.h
src/Interface/: Input.h  Object.h  Random.h
src/Item/: Item.h
src/Logic/: CMakeLists.txt  MapBuilder.cc  MapBuilder.h  Pathfinder.cc  Pathfinder.h
src/Map/: BaseBuilding.cc  BaseBuilding.h  Block.cc  Block.h  Building.cc  Building.h  CMakeLists.txt  GameMap.cc  GameMap.h  Map.cc  Map.h  Point.h  Space.cc  Space.h  World.h  building_implementation.h  map_cmake.h
src/Map/Block/: BaseBlock.cc  BaseBlock.h  Block.cc  Block.h  block_implementation.h
src/Map/Building/: BaseBuilding.cc  BaseBuilding.h  Building.cc  Building.h  BuildingPtr.cc  BuildingPtr.h  LinkBuilding.cc  LinkBuilding.h  building_implementation.h
src/Object/: Action.h  CMakeLists.txt  Creature.cc  Creature.h  LivingThing.cc  LivingThing.h  LivingThings.cc  LivingThings.h  creature_cmake.h
src/Object/Action/: CreatureAction.cc  CreatureAction.h  CreatureActions.cc  CreatureActions.h  CreatureDestroyAction.cc  CreatureDestroyAction.h  CreatureGatherAction.cc  CreatureGatherAction.h  CreatureMoveAction.cc  CreatureMoveAction.h  creature_action.h  creature_action_implementation.h
