cmake_minimum_required(VERSION 3.0)
project(Unnaming)
include(GenerateExportHeader)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
# For shared library on windows
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
# Use c++ 11
add_subdirectory(src/Map)
add_subdirectory(src/Logic)
add_subdirectory(src/Graphic)
generate_export_header(Logic)
add_subdirectory(src/Object)
aux_source_directory(src DIR_SRC)
add_executable(Unnaming.out ${DIR_SRC})
target_link_libraries(Unnaming.out Map)
target_link_libraries(Unnaming.out Logic)
target_link_libraries(Unnaming.out Renderer)
target_link_libraries(Unnaming.out Object)
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  target_compile_options(Unnaming.out PRIVATE -Wall -Wextra)
elseif(MSVC)
  target_compile_options(Unnaming.out PRIVATE /W4)
endif()
# More warnnings
