cmake_minimum_required(VERSION 3.0)
project(Unnaming CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
cmake_policy(SET CMP0063 NEW) # Enable hidden visibility for executable
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
include(CMake/compiler.cmake)
add_subdirectory(src/Map)
add_subdirectory(src/Logic)
add_subdirectory(src/Graphic)
add_subdirectory(src/Object)
add_subdirectory(src/FrontEnd)
add_subdirectory(src/Fov)
add_executable(Unnaming src/main.cc)
target_link_libraries(Unnaming CinInput Creature Fov Logic Map Renderer)
